<resources>
    <string name="app_name">Note Keeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="write_your_content_here">Write your content here</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note_list2">NoteListActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notes">Notes</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Notebooks">"Notebooks "</string>
    <string name="note_keeper">Note Keeper</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="add_new_notebook">Add new notebook</string>
    <string name="save">Save</string>
    <string name="cancel_editing">Cancel Editing</string>
    <string name="delete">Delete</string>
    <string name="send_as_email">Send as email</string>
    <string name="save_this_note">Save this note</string>
    <string name="plus">+</string>
    <string name="select_notebook_for_note">Select a notebook for this note</string>
    <string name="create_new_note">Create new note</string>
    <string name="sub_text">Sub Text</string>
    <string name="main_text">Main Text</string>
    <string name="notebook_description">Notebook description</string>
    <string name="create_a_new_notebook">Create a new notebook</string>
    <string name="create">Create</string>
    <string name="textview">TextView</string>
    <string name="new_note">New Note</string>
    <string name="new_notebook">New Notebook</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_statement">- This app does not collect or store any personal data.\n\n- This app does not collect or store your notes or notebooks on any external server.\n\n- This app does not send your notes, notebooks or any personal data to any third party entities.\n\n- All your notes and notebooks are stored on this device only.</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="options">Options</string>
    <string name="note_search">Search by name, tags or contents…</string>
    <string name="notebook_search">Search by name or description</string>
    <string name="notebook_label">Notebook</string>
    <string name="note_label">Note</string>
    <string name="microphone_for_voice_search">Microphone for voice search</string>
</resources>
